# back/src/openapi/routes/index.ts
@@ -2,7 +2,9 @@ import './auth/login'
 import './auth/register'
 import './auth/me'
 import './auth/logout'
-import './categories'
+import './categories/get'
+import './categories/create'
+import './categories/patch'
 import './topics/get'
 import './topics/create'
 import './topics/patch'
